# SmartHire

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 0001_initial_schema.py  0002_add_user_password_hash.py  0003_add_application_source_snapshot_fields.py
backend/app/: __init__.py  main.py
backend/app/admin/: __init__.py  audit.py  auth.py  masking.py  security.py  setup.py  views.py
backend/app/api/: health.py
backend/app/core/: __init__.py  auth.py  config.py  errors.py  exception_handlers.py  logging.py  middleware.py  responses.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  ai.py  audit.py  base.py  enums.py  identity.py  kando.py  notes.py  ranking.py  screening.py
backend/app/schemas/: __init__.py  common.py  internal_api.py
backend/app/services/: ai_analysis_service.py  audit_service.py  automation_service.py  kando_client.py  kando_sync_service.py  llm_client.py  normalization_service.py  prompt_builder.py  ranking_engine.py  rule_engine.py  snapshot_builder.py  worker_task_service.py
backend/app/workers/: celery_app.py  (+4 more)
backend/tests/: test_ai_analysis_service.py  test_auth.py  test_celery_automation.py  test_errors.py  test_health.py  test_internal_api.py  test_kando_client.py  test_kando_sync_service.py  test_normalization_service.py  test_ranking_engine.py  test_request_id.py  test_rule_engine.py  test_snapshot_builder.py  test_sqladmin.py  test_sync_tasks.py
(+172 files in other folders)
